public interface NavegadorInternet  {
    void exibirPagina (String url);
    void adicionarNovaAba();
    void atualizarPagina ();
}
