classDiagram
    class ReprodutorMusical {
        +void tocar()
        +void pausar()
        +void selecionarMusica(musica: String)
    }

    class AparelhoTelefonico {
        +void ligar(numero: String)
        +void atender()
        +void iniciarCorreioVoz()
    }

    class NavegadorInternet {
        +void exibirPagina(url: String)
        +void adicionarNovaAba()
        +void atualizarPagina()
    }

    class iPhone {
        +void tocar()
        +void pausar()
        +void selecionarMusica(musica: String)
        +void ligar(numero: String)
        +void atender()
        +void iniciarCorreioVoz()
        +void exibirPagina(url: String)
        +void adicionarNovaAba()
        +void atualizarPagina()
    }

    ReprodutorMusical <|.. iPhone
    AparelhoTelefonico <|.. iPhone
    NavegadorInternet <|.. iPhone